journal/frontend/deployment.frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: default
  labels:
    app: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: docker.io/janhaans/frontend:0.1
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: 250m
              memory: 256M
            limits:
              cpu: 250m
              memory: 256M
